syntax = "proto3";

import "common.proto";

option java_package = "com.graduate.design.proto";
option java_outer_classname="UserRegister";
option go_package = "./pb_gen";

message UserRegisterRequest{
    string userName = 1;
    string hashId = 2;
    string email = 3;
    string biIndex = 4;
    string key1 = 5;
    string key2 = 6;

    BaseReq baseReq = 255;
}

message UserRegisterResponse{

    BaseResp baseResp = 255;
}